# Gamma

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/algorithmic/: CMakeLists.txt
examples/analysis/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
examples/curves/: CMakeLists.txt
examples/effects/: CMakeLists.txt
examples/envelope/: CMakeLists.txt
examples/filter/: CMakeLists.txt
examples/function/: CMakeLists.txt
examples/io/: CMakeLists.txt
examples/oscillator/: CMakeLists.txt
examples/source/: CMakeLists.txt
examples/spatial/: CMakeLists.txt
examples/spectral/: CMakeLists.txt
examples/synthesis/: CMakeLists.txt
examples/synths/: CMakeLists.txt
examples/techniques/: CMakeLists.txt
src/: CMakeLists.txt
