add_subdirectory(algorithmic)
add_subdirectory(analysis)
add_subdirectory(curves)
add_subdirectory(effects)
add_subdirectory(envelope)
add_subdirectory(filter)
add_subdirectory(function)
add_subdirectory(io)
add_subdirectory(oscillator)
add_subdirectory(source)
add_subdirectory(spatial)
add_subdirectory(spectral)
add_subdirectory(synthesis)
add_subdirectory(synths)
add_subdirectory(techniques)
